fixed a shadow clipping problem

--- a/src/assets/window-ld-live-danmaku-list.module.less
+++ b/src/assets/window-ld-live-danmaku-list.module.less
@@ -66,15 +66,18 @@
         }
 
         .list {
+            @gap: 1em;
+
             flex-grow: 1;
             overflow: auto;
             margin-top: @padding;
             display: flex;
             flex-direction: column;
-            gap: 1em;
+            gap: @gap;
             list-style: none;
             width: 100%;
             height: 100%;
+            padding-bottom: @gap;
         }
     }
 }
